[tool.poetry]
name = "library"
version = "0.1.0"
description = "A library Project"
license = "MIT"
authors = ["nandhagk <nandhagopi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.0.31"
click = "^8.1.3"
pyqt6 = "^6.4.0"
pypeg2 = "^2.15.2"
tinycss2 = "^1.2.1"
webcolors = "^1.12"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
flake8-annotations = "^2.7.0"
flake8-bugbear = "^23.0.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^5.0.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.5.0"
flake8-todo = "^0.7"
pep8-naming = "^0.13.0"
pre-commit = "^2.15.0"
shed = "^0.10.0"
taskipy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
start = "python -m library"
precommit = "pre-commit install"

[tool.isort]
profile = "black"
case_sensitive = true

[tool.pyright]
include = ["library"]
